# ros_object_recognition

./: .gitignore  README
docs/: project_description.tex
doxygen/: Doxyfile
src/: LICENSE
src/binary_detector/: CMakeLists.txt  package.xml  rename.bash
src/binary_detector/cfg/: Parameters.cfg
src/binary_detector/params/: pink_pad.yaml
src/binary_detector/src/: binary_detector.cpp  groupbox.cpp  observed_parameter_manager.cpp  parameter_manager.cpp  reconfigure_parameter_manager.cpp
src/distance_filter/: CMakeLists.txt  package.xml  rename.bash
src/distance_filter/cfg/: Parameters.cfg
src/distance_filter/src/: distance_filter.cpp  groupbox.cpp  observed_parameter_manager.cpp  parameter_manager.cpp  reconfigure_parameter_manager.cpp
src/feature_detector/: CMakeLists.txt  package.xml  rename.bash
src/feature_detector/cfg/: Parameters.cfg  ParametersOld.cfg
src/feature_detector/src/: descriptor_matcher_groupbox.cpp  feature_detector.cpp  groupbox.cpp  observed_parameter_manager.cpp  parameter_manager.cpp  reconfigure_parameter_manager.cpp  surf_groupbox.cpp  thresholds_groupbox.cpp
src/hsv_filter/: CMakeLists.txt  package.xml
src/hsv_filter/cfg/: Parameters.cfg
src/hsv_filter/launch/: hsv_filter.launch
src/hsv_filter/params/: body_milk.yaml  book.yml  pink_pad.yaml
src/hsv_filter/src/: groupbox.cpp  hsv_filter.cpp  observed_parameter_manager.cpp  parameter_manager.cpp  reconfigure_parameter_manager.cpp
src/morphology_filter/: CMakeLists.txt  package.xml  rename.bash
src/morphology_filter/cfg/: Parameters.cfg
src/morphology_filter/include/morphology_filter/: groupbox.h  morphology_filter.h  observed_parameter_manager.h  parameter_manager.h  reconfigure_parameter_manager.h
src/morphology_filter/params/: pink_pad.yaml
src/morphology_filter/src/: groupbox.cpp  morphology_filter.cpp  observed_parameter_manager.cpp  parameter_manager.cpp  reconfigure_parameter_manager.cpp
src/object_detection/: CMakeLists.txt  package.xml  rename.bash
src/object_detection_2d/: CMakeLists.txt  package.xml  rename.bash  rename_gui.bash
src/object_detection_2d/msg/: MouseEvent.msg  Rect2D.msg
src/object_detection_2d/src/: definition_director.cpp  detection_director.cpp  gui.cpp  interactive_image.cpp  parameter_storage.cpp  ros_detector_wrapper.cpp  ros_filter_wrapper.cpp
src/object_detection_2d_msgs/: CMakeLists.txt  package.xml
src/object_detection_2d_msgs/msg/: DetectedObject2D.msg  DetectedObject2DArray.msg
src/object_detection_2d_nodes/: CMakeLists.txt  package.xml
src/object_detection_2d_nodes/launch/: feature_gui_definition.launch  feature_gui_detection.launch  feature_node_definition.launch  feature_node_detection.launch  hsv_definition.launch  hsv_detection.launch  hsv_morph_binary_nodes_definition.launch  hsv_morph_binary_nodes_pinkpad.launch  hsv_pinkpad_detection.launch
src/object_detection_2d_nodes/params/: feature_ros_book.xml  feature_ros_book_dynparam.yaml  hsv_pinkpad.xml
src/object_detection_2d_nodes/rviz/: feature_detection.rviz  hsv_morph_binary_nodes.rviz
src/object_detection_2d_nodes/src/: binary_detector_node.cpp  feature_definition.cpp  feature_detection.cpp  feature_detector_node.cpp  hsv_definition.cpp  hsv_detection.cpp  hsv_filter_node.cpp  morphology_filter_node.cpp
src/object_detection_2d_vis/: CMakeLists.txt  package.xml
src/object_detection_2d_vis/launch/: vis_area_selection.launch  visualizer.launch
src/object_detection_2d_vis/src/: area_selection.cpp  visualizer.cpp  visualizer_main.cpp
src/object_detection_3d/: CMakeLists.txt  package.xml  rename.bash
src/object_detection_3d/src/: definition_director.cpp  detection_director.cpp  gui.cpp  parameter_storage.cpp  ros_detector_wrapper.cpp  ros_filter_wrapper.cpp
src/object_detection_3d_msgs/: CMakeLists.txt  package.xml
src/object_detection_3d_msgs/msg/: DetectedObject3D.msg  DetectedObject3DArray.msg  OrientedBox.msg
src/object_detection_3d_nodes/: CMakeLists.txt  package.xml
src/object_detection_3d_nodes/launch/: distance_filter_node.launch  distance_shape_detection.launch  distance_shape_nodes_definition.launch  shape_detector_node.launch
src/object_detection_3d_nodes/rviz/: distance_shape_nodes.rviz
src/object_detection_3d_nodes/src/: distance_filter_node.cpp  distance_shape_definition.cpp  distance_shape_detection.cpp  shape_detector_node.cpp
src/object_painter/: CMakeLists.txt  package.xml
src/object_painter/cfg/: ObjectPainter.cfg
src/object_painter/launch/: object_painter.launch
src/object_painter/src/: main.cpp  object_painter.cpp
src/objects2d_to_objects3d/: CMakeLists.txt  package.xml
src/objects2d_to_objects3d/launch/: objects2d_to_objects3d.launch  objects2d_to_objects3d_test.launch
src/objects2d_to_objects3d/src/: objects2d_to_objects3d.cpp
src/objects_to_markers/: CMakeLists.txt  package.xml
src/objects_to_markers/cfg/: Parameters.cfg
src/objects_to_markers/launch/: objects_to_markers.launch
src/objects_to_markers/src/: main.cpp  marker_publisher_test.cpp  objects_to_markers.cpp
src/shape_detector/: CMakeLists.txt  package.xml  rename.bash
src/shape_detector/cfg/: Parameters.cfg
src/shape_detector/src/: cylinder_computer.cpp  groupbox.cpp  normal_estimation_groupbox.cpp  object_computer.cpp  observed_parameter_manager.cpp  parameter_manager.cpp  reconfigure_parameter_manager.cpp  segmentation_groupbox.cpp  shape_detector.cpp  sphere_computer.cpp
src/whs_navigation/: CMakeLists.txt  package.xml
src/whs_navigation/cfg/: Parameters.cfg
src/whs_navigation/launch/: b5203_real.launch  b5203_stage.launch  navigation_real.launch  navigation_stage.launch  navigation_stage_with_obstacles.launch  patrol_b5203.launch  patrol_room_09_26_15_56.launch  slam_gmapping.launch  slam_gmapping_navstack_settings.launch  turtlebot_mapping.launch
src/whs_navigation/maps/: b5203.pgm  b5203.yaml  b5203_bordered.pgm  b5203_bordered.xcf  room_06_01_22_40.pgm  room_06_01_22_40.yaml  room_06_01_22_40_increasedaccuracy.pgm  room_06_01_22_40_increasedaccuracy.yaml  room_06_01_22_40_increasedaccuracy_modified.pgm  (+9 more)
(+72 files in other folders)
