cmake_minimum_required(VERSION 2.8.3)
project(object_detection_2d_nodes)

## Compile as C++11, supported in ROS Kinetic and newer
add_compile_options(-std=c++11 -g)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(Boost COMPONENTS system REQUIRED)
find_package(catkin REQUIRED COMPONENTS
  hsv_filter
  morphology_filter
  binary_detector
  feature_detector
  object_detection_2d
  roscpp
)

## System dependencies are found with CMake's conventions
# find_package(Boost REQUIRED COMPONENTS system)


## Uncomment this if the package has a setup.py. This macro ensures
## modules and global scripts declared therein get installed
## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
# catkin_python_setup()

################################################
## Declare ROS messages, services and actions ##
################################################

## To declare and build messages, services or actions from within this
## package, follow these steps:
## * Let MSG_DEP_SET be the set of packages whose message types you use in
##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
## * In the file package.xml:
##   * add a build_depend tag for "message_generation"
##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
##     but can be declared for certainty nonetheless:
##     * add a run_depend tag for "message_runtime"
## * In this file (CMakeLists.txt):
##   * add "message_generation" and every package in MSG_DEP_SET to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * add "message_runtime" and every package in MSG_DEP_SET to
##     catkin_package(CATKIN_DEPENDS ...)
##   * uncomment the add_*_files sections below as needed
##     and list every .msg/.srv/.action file to be processed
##   * uncomment the generate_messages entry below
##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)

## Generate messages in the 'msg' folder
# add_message_files(
#   FILES
#   Message1.msg
#   Message2.msg
# )

## Generate services in the 'srv' folder
# add_service_files(
#   FILES
#   Service1.srv
#   Service2.srv
# )

## Generate actions in the 'action' folder
# add_action_files(
#   FILES
#   Action1.action
#   Action2.action
# )

## Generate added messages and services with any dependencies listed here
# generate_messages(
#   DEPENDENCIES
#   std_msgs  # Or other packages containing msgs
# )

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

## To declare and build dynamic reconfigure parameters within this
## package, follow these steps:
## * In the file package.xml:
##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
## * In this file (CMakeLists.txt):
##   * add "dynamic_reconfigure" to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * uncomment the "generate_dynamic_reconfigure_options" section below
##     and list every .cfg file to be processed

## Generate dynamic reconfigure parameters in the 'cfg' folder
# generate_dynamic_reconfigure_options(
#   cfg/DynReconf1.cfg
#   cfg/DynReconf2.cfg
# )

###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if your package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES object_detection_2d_nodes
#  CATKIN_DEPENDS hsv_filter morphology_filter binary_detector feature_detector object_detection_2d roscpp
#  DEPENDS system_lib
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)

## Declare a C++ library
# add_library(${PROJECT_NAME}
#   src/${PROJECT_NAME}/object_detection_2d_nodes.cpp
# )

## Add cmake target dependencies of the library
## as an example, code may need to be generated before libraries
## either from message generation or dynamic reconfigure
# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Declare a C++ executable
## With catkin_make all packages are built within a single CMake context
## The recommended prefix ensures that target names across packages don't collide
add_executable(${PROJECT_NAME}_hsv_filter_node
  src/hsv_filter_node.cpp
  )
set_target_properties(${PROJECT_NAME}_hsv_filter_node PROPERTIES OUTPUT_NAME hsv_filter_node PREFIX "")
target_link_libraries(${PROJECT_NAME}_hsv_filter_node
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)
## Add cmake target dependencies of the executable
## same as for the library above
# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

add_executable(${PROJECT_NAME}_hsv_definition
  src/hsv_definition.cpp
  )
set_target_properties(${PROJECT_NAME}_hsv_definition PROPERTIES OUTPUT_NAME hsv_definition PREFIX "")
target_link_libraries(${PROJECT_NAME}_hsv_definition
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)

add_executable(${PROJECT_NAME}_hsv_detection
  src/hsv_detection.cpp
  )
set_target_properties(${PROJECT_NAME}_hsv_detection PROPERTIES OUTPUT_NAME hsv_detection PREFIX "")
target_link_libraries(${PROJECT_NAME}_hsv_detection
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)

add_executable(${PROJECT_NAME}_morphology_filter_node
  src/morphology_filter_node.cpp
  )
set_target_properties(${PROJECT_NAME}_morphology_filter_node PROPERTIES OUTPUT_NAME morphology_filter_node PREFIX "")
target_link_libraries(${PROJECT_NAME}_morphology_filter_node
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)

add_executable(${PROJECT_NAME}_binary_detector_node
  src/binary_detector_node.cpp
  )
set_target_properties(${PROJECT_NAME}_binary_detector_node PROPERTIES OUTPUT_NAME binary_detector_node PREFIX "")
target_link_libraries(${PROJECT_NAME}_binary_detector_node
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)

add_executable(${PROJECT_NAME}_feature_detector_node
  src/feature_detector_node.cpp
  )
set_target_properties(${PROJECT_NAME}_feature_detector_node PROPERTIES OUTPUT_NAME feature_detector_node PREFIX "")
target_link_libraries(${PROJECT_NAME}_feature_detector_node
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)

add_executable(${PROJECT_NAME}_feature_definition
  src/feature_definition.cpp
  )
set_target_properties(${PROJECT_NAME}_feature_definition PROPERTIES OUTPUT_NAME feature_definition PREFIX "")
target_link_libraries(${PROJECT_NAME}_feature_definition
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)

add_executable(${PROJECT_NAME}_feature_detection
  src/feature_detection.cpp
  )
set_target_properties(${PROJECT_NAME}_feature_detection PROPERTIES OUTPUT_NAME feature_detection PREFIX "")
target_link_libraries(${PROJECT_NAME}_feature_detection
  ${catkin_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
)


#############
## Install ##
#############

# all install targets should use catkin DESTINATION variables
# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html

## Mark executable scripts (Python etc.) for installation
## in contrast to setup.py, you can choose the destination
# install(PROGRAMS
#   scripts/my_python_script
#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark executables and/or libraries for installation
# install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark cpp header files for installation
# install(DIRECTORY include/${PROJECT_NAME}/
#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
#   FILES_MATCHING PATTERN "*.h"
#   PATTERN ".svn" EXCLUDE
# )

## Mark other files for installation (e.g. launch and bag files, etc.)
# install(FILES
#   # myfile1
#   # myfile2
#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
# )

#############
## Testing ##
#############

## Add gtest based cpp test target and link libraries
# catkin_add_gtest(${PROJECT_NAME}-test test/test_object_detection_2d_nodes.cpp)
# if(TARGET ${PROJECT_NAME}-test)
#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
# endif()

## Add folders to be run by python nosetests
# catkin_add_nosetests(test)
